--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
+    "@fontsource/montserrat": "^5.2.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
